--- a/Events.html
+++ b/Events.html
@@ -10,7 +10,7 @@
     <div class="navbar">
         <ul>
             <!--Buttons right side for the navbar-->
-            <li><b><a href="Page1.html">Home</a></li></b>
+            <li><b><a href="index.html">Home</a></li></b>
             <li><b><a href="Events.html">Events</a></li></b>
             <li><b><a href="https://www.instagram.com/_psycode_?utm_source=ig_web_button_share_sheet&igsh=OGQ5ZDc2ODk2ZA==">Instagram</a></li></b>
             <li><b><a href="https://open.spotify.com/artist/7hILKtHLXV9cjCEtV2WASJ?si=WpmC0N3iTw2OWQhNpdXHuQ">Kurt Lasam</a></li></b>
