--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-        <div class="navbar">
+        <div class="navbar" id="navbarko">
             <ul>
                 <!--Buttons right side for the navbar-->
                 <li><b><a href="index.html">Home&emsp;</a></li></b>
@@ -21,7 +21,7 @@
         <img src="band photo.jpg" width="80%" height="100%" class="photo1">
         <div class="aboutband">
             <h1 class="title">WE ARE PSYCODE</h1>
-            <p class="description"> PSYCODE IS A BAND FORMED IN 2022 TO PERFORM REPRESENTING BATH SPA UNIVERSITY
+            <p class="description" id="banddesc"> PSYCODE IS A BAND FORMED IN 2022 TO PERFORM REPRESENTING BATH SPA UNIVERSITY
                 IN THE JASHN EVENT OF BITS PILANI DUBAI, WITH THE PRESENCE OF SKILLED MUSICIANS
                 FROM DIFFERENT BACKGROUNDS, WE HAVE DECIDED TO KEEP THE BAND TOGETHER 
                 AND OPENNED OUR DOORS TO OUTSIDE UNIVERSITY PERFORMANCES WITH ALL 8 MEMBERS ABOARD.
@@ -30,9 +30,9 @@
     </div>
     <div class="Members">
         <div class="linziegaac">
-            <img src="linzie.jpg" width="55%" height="65%" class="linzie">
-            <h1 class="linzietitle">LINZIE</h1>
-            <p class="linziedesc">
+            <img src="linzie.jpg" width="55%" height="65%" class="linzie" id="Linzpic">
+            <h1 class="linzietitle" id="Singer">LINZIE</h1>
+            <p class="linziedesc" id="Singerdesc">
             Linzie the main vocalist<br> and the head of the band, <br>
             she is known for her<br> incredible voice <br>
             and knowledge to various<br>
@@ -40,9 +40,9 @@
             </p>
         </div>
         <div class="danfranco">
-            <img src="dan.jpg" width="55%" height="65%" class="dan">
-            <h1 class="dantitle">DAN</h1>
-            <p class="dandesc">
+            <img src="dan.jpg" width="55%" height="65%" class="dan" id="Danpic">
+            <h1 class="dantitle" id="Drums">DAN</h1>
+            <p class="dandesc" id="Drummerdesc">
             Dan is a man of many<br> instruments and a <br>
             friend and classmate<br> of our bassist, Pats.<br>
             After their friendship<br> was established,
@@ -51,17 +51,17 @@
             </p>
         </div>
         <div class="kurtlasam">
-            <img src="kurt2.jpg" width="60%" height="90%" class="kurt">
-            <h1 class="kurttitle">KURT</h1>
-            <p class="kurtdesc">
+            <img src="kurt2.jpg" width="60%" height="90%" class="kurt" id="Kurtpic">
+            <h1 class="kurttitle" id="Guitar2">KURT</h1>
+            <p class="kurtdesc" id="Guitar2desc">
                 Kurt is a song composer and second guitar of PsyCode,<br>
                 he is known for his voice and his other half, Mark.
             </p>
         </div>
         <div class="patsfalcon">
-            <imG src="jp.jpg" width="50%" height="70%" class="pats">
-            <h1 class="patstitle">PAT</h1>
-            <p class="patsdesc">
+            <imG src="jp.jpg" width="50%" height="70%" class="pats" id="Patspic">
+            <h1 class="patstitle" id="Bass">PAT</h1>
+            <p class="patsdesc" id="Bassdesc">
             Pats is a full-time bassist,<br>
             notorious for the bass he weilds<br>
             during performances inside and<br> outside the university alongside<br>
@@ -69,32 +69,32 @@
             </p>
         </div>
         <div class="hannahharesco">
-            <img src="hannah1.jpg" width="50%" height="70%" class="hannah">
-            <h1 class="hannahtitle">HANNAH</h1>
-            <p class="hannahdesc">
+            <img src="hannah1.jpg" width="50%" height="70%" class="hannah" id="Hannahpic">
+            <h1 class="hannahtitle" id="Guitar3">HANNAH</h1>
+            <p class="hannahdesc" id="Guitar3desc">
                 Hannah is one of our guitarist<br>
                 and one of the founding members
                 of<br> the band and a good friend of Linzie.
             </p>
         </div>
         <div class="markbuyco">
-            <img src="mark.jpg" width="50%" height="70%" class="mark">
-            <h1 class="marktitle">MARK</h1>
-            <p class="markdesc">
+            <img src="mark.jpg" width="50%" height="70%" class="mark" id="Markpic">
+            <h1 class="marktitle" id="Guitar1">MARK</h1>
+            <p class="markdesc" id="Guitar1desc">
                 Mark is our lead guitarist<br> specializing in licks and<br>
                 improvised solos,<br> a man of many instruments.
         </div>
         <div class="jarenbuyco">
-            <img src="Jaren.jpg" width="50%" height="70%" class="jaren">
-            <h1 class="jarentitle">JAREN</h1>
-            <p class="jarendesc">
+            <img src="Jaren.jpg" width="50%" height="70%" class="jaren" id="Jarenpic">
+            <h1 class="jarentitle" id="Keyboard">JAREN</h1>
+            <p class="jarendesc" id="Keyboarddesc">
                 Jaren is our main keyboardist, younger brother of Mark.
                 Utilizes his voice as backup and blends alongside guitarists.  
         </div>
         <div class="mariyarinelle">
-            <img src="mariya.png" width="40%" height="60%" class="mariya">
-            <h1 class="mariyatitle">MARIYA</h1>
-            <p class="mariyadesc">
+            <img src="mariya.png" width="40%" height="60%" class="mariya" id="Mariyapic">
+            <h1 class="mariyatitle" id="Manager">MARIYA</h1>
+            <p class="mariyadesc" id="Managerdesc">
                 Mariya is one of our vocalists<br>and manager of the band.<br> She 
                 scouts for outside gigs,<br> and holds contacts of people<br> interested
                 in live performances.
